--- a/index.html
+++ b/index.html
@@ -317,44 +317,50 @@
                     name: "Escargots de Bourgogne",
                     description: "Traditional Burgundy snails in garlic herb butter",
                     price: "€14",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.starters
                 },
                 {
                     name: "Duck Liver Pâté",
                     description: "Smooth duck liver pâté with toasted brioche and onion marmalade",
                     price: "€16",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.starters
                 },
                 {
                     name: "Goat Cheese Salad",
                     description: "Mixed greens with warm goat cheese, honey, and walnuts",
                     price: "€13",
-                    tags: ["Vegetarian"]
-                }
-                ,
+                    tags: ["Vegetarian"],
+                    image: placeholderImages.starters
+                },
                 {
                     name: "Salade Niçoise",
                     description: "Classic French salad with tuna, olives, eggs, green beans, and anchovy dressing",
                     price: "€15",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.starters
                 },
                 {
                     name: "Soupe à l'Oignon Gratinée",
                     description: "Traditional French onion soup topped with crusty bread and melted Gruyère",
-                    price: "€11", 
-                    tags: ["Vegetarian Option"]
+                    price: "€11",
+                    tags: ["Vegetarian Option"],
+                    image: placeholderImages.starters
                 },
                 {
                     name: "Tartare de Saumon",
                     description: "Fresh salmon tartare with capers, shallots, and citrus dressing",
                     price: "€17",
-                    tags: ["Raw", "Chef's Special"]
+                    tags: ["Raw", "Chef's Special"],
+                    image: placeholderImages.starters
                 },
                 {
                     name: "Moules Marinières",
                     description: "Steamed mussels in white wine sauce with fresh herbs",
                     price: "€14",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.starters
                 }
             ],
             mains: [
@@ -362,50 +368,57 @@
                     name: "Coq au Vin",
                     description: "Traditional braised chicken in red wine sauce with pearl onions and mushrooms",
                     price: "€28",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.mains
                 },
                 {
                     name: "Beef Bourguignon",
                     description: "Slow-cooked beef in red wine with bacon lardons and root vegetables",
                     price: "€32",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.mains
                 },
                 {
                     name: "Ratatouille en Croûte",
                     description: "Provençal vegetable stew in puff pastry with herb sauce",
                     price: "€24",
-                    tags: ["Vegetarian", "Chef's Special"]
+                    tags: ["Vegetarian", "Chef's Special"],
+                    image: placeholderImages.mains
                 },
                 {
                     name: "Duck Confit",
                     description: "Crispy duck leg confit with roasted potatoes and frisée salad",
                     price: "€34",
-                    tags: []
-                }
-                ,
+                    tags: [],
+                    image: placeholderImages.mains
+                },
                 {
                     name: "Bouillabaisse",
                     description: "Traditional Provençal fish stew with assorted seafood, served with rouille and crusty bread",
                     price: "€36",
-                    tags: ["Chef's Special"]
+                    tags: ["Chef's Special"],
+                    image: placeholderImages.mains
                 },
                 {
                     name: "Cassoulet",
                     description: "Hearty bean stew with duck confit, pork belly and Toulouse sausage",
                     price: "€30",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.mains
                 },
                 {
                     name: "Sole Meunière",
                     description: "Pan-fried Dover sole with brown butter, lemon and parsley",
                     price: "€38",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.mains
                 },
                 {
                     name: "Magret de Canard",
                     description: "Pan-seared duck breast with cherry sauce and gratin dauphinois",
                     price: "€33",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.mains
                 }
             ],
             desserts: [
@@ -413,19 +426,22 @@
                     name: "Crème Brûlée",
                     description: "Classic vanilla bean custard with caramelized sugar crust",
                     price: "€10",
-                    tags: ["Vegetarian"]
+                    tags: ["Vegetarian"],
+                    image: placeholderImages.desserts
                 },
                 {
                     name: "Tarte Tatin",
                     description: "Upside-down caramelized apple tart with vanilla ice cream",
                     price: "€12",
-                    tags: ["Vegetarian"]
+                    tags: ["Vegetarian"],
+                    image: placeholderImages.desserts
                 },
                 {
                     name: "Chocolate Soufflé",
                     description: "Warm chocolate soufflé with crème anglaise (20 min preparation)",
                     price: "€14",
-                    tags: ["Vegetarian"]
+                    tags: ["Vegetarian"],
+                    image: placeholderImages.desserts
                 }
             ],
             drinks: [
@@ -433,25 +449,29 @@
                     name: "House Red Wine",
                     description: "Bordeaux blend, 175ml",
                     price: "€8",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.drinks
                 },
                 {
                     name: "House White Wine",
                     description: "Chablis, 175ml",
                     price: "€8",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.drinks
                 },
                 {
                     name: "Sparkling Water",
                     description: "750ml bottle",
                     price: "€5",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.drinks
                 },
                 {
                     name: "French Press Coffee",
                     description: "Organic blend, serves one",
                     price: "€4",
-                    tags: []
+                    tags: [],
+                    image: placeholderImages.drinks
                 }
             ]
         };
