--- a/index.html
+++ b/index.html
@@ -336,10 +336,13 @@
                     tags: []
                 },
                 {
-                    name: "Duck Liver Pâté",
-                    description: "Smooth duck liver pâté with toasted brioche and onion marmalade",
-                    price: "€16",
-                    tags: []                },
+                    name: "Coq au Vin",
+                    description: "Traditional braised chicken in red wine sauce with pearl onions and mushrooms",
+                    price: "€28",
+                    tags: [],
+                    image: placeholderImages.coqAuVin
+
+                },
                 {
                     name: "Goat Cheese Salad",
                     description: "Mixed greens with warm goat cheese, honey, and walnuts",
@@ -373,13 +376,6 @@
             ],
             mains: [
                 {
-                    name: "Coq au Vin",
-                    description: "Traditional braised chicken in red wine sauce with pearl onions and mushrooms",
-                    price: "€28",
-                    tags: [],
-                    image: placeholderImages.coqAuVin
-                },
-                {
                     name: "Beef Bourguignon",
                     description: "Slow-cooked beef in red wine with bacon lardons and root vegetables",
                     price: "€32",
@@ -396,6 +392,12 @@
                     description: "Crispy duck leg confit with roasted potatoes and frisée salad",
                     price: "€34",
                     tags: []
+                },                
+                {
+                    name: "Duck Liver Pâté",
+                    description: "Smooth duck liver pâté with toasted brioche and onion marmalade",
+                    price: "€16",
+                    tags: []                
                 },
                 {
                     name: "Bouillabaisse",
