--- a/index.html
+++ b/index.html
@@ -108,23 +108,21 @@
             flex-direction: column;
             justify-content: center;
             padding-right: 15px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-left: 10px;
         }
 
         .menu-item-image {
             width: 180px;
             flex-shrink: 0;
-            border: 1px solid #000;
-            border-right: none;
-            border-top: none;
-            border-bottom: none;
-            border-top-left-radius: 8px;
-            border-bottom-left-radius: 8px;
+            border-radius: 8px;
             overflow: hidden;
             background: #fff;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-right: -1px;
+            margin-right: 0px;
         }
 
         .menu-item-image img {
@@ -238,7 +236,7 @@
             }
 
             .menu-item {
-                padding: 10px;
+                padding: 0px;
                 margin-bottom: 10px;
             }
 
