--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         }
 
         .menu-item {
-            padding: 15px;
+            padding: 0px;
             padding-right: 0;
             margin-bottom: 15px;
             border: 1px solid #000;
@@ -123,6 +123,8 @@
             align-items: center;
             justify-content: center;
             margin-right: 0px;
+            outline: 2px solid #000000;
+            outline-offset: -2px;
         }
 
         .menu-item-image img {
