--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
             align-items: center;
             justify-content: center;
             margin-right: 0px;
-            outline: 2px solid #000000;
-            outline-offset: -2px;
+            outline: 1px solid #000000;
         }
 
         .menu-item-image img {
@@ -289,7 +288,7 @@
                 margin: -15px -15px 15px -15px;
                 border: none;
                 border-bottom: 1px solid #000;
-                border-radius: 8px 8px 0 0;
+                border-radius: 8px 0 0 8px;
                 order: -1;
             }
 
