--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         .menu-item-image {
             width: 180px;
             flex-shrink: 0;
-            border-radius: 8px;
+            border-radius: 0 8px 8px 0;
             overflow: hidden;
             background: #fff;
             display: flex;
@@ -288,7 +288,7 @@
                 margin: -15px -15px 15px -15px;
                 border: none;
                 border-bottom: 1px solid #000;
-                border-radius: 8px 0 0 8px;
+                border-radius: 8px 8px 0 0;
                 order: -1;
             }
 
